FIXED align for national contribution content type

--- a/sites/all/themes/effoundationtheme/css/ef.css
+++ b/sites/all/themes/effoundationtheme/css/ef.css
@@ -14529,7 +14529,7 @@ h4.title-tooltip-geolocation a:hover{
     font-size: 1.8em;
 }
 
-.float-img-render img{
+.float-img-render .field-name-field-ef-main-image img{
 	float: left;
 	margin: 0px 25px 20px 0px;
 }
